# trigger

./: .env  .gitignore  Cargo.toml  README.md
db/: film.db3
src/: api.rs  main.rs  model.rs
static/: cuipeng.html  jeu.html  pinky-web.wasm  zaixia.html
static/css/: cuipeng.css  jeu.css  zaixia.css
static/images/doc10/: DataTraveler.7z
static/images/doc11/: gameboy.7z
static/images/doc14/: asteroids.html  main.js
static/images/doc2/: pinky-web.js  pinky.html
static/images/doc5/: Justice.7z
static/lib/: vue-router.min.js  vue.min.js
static/roms/: index.json
