[package]
name = "trigger_"
version = "0.1.0"
authors = ["Archimboldi <1751844336@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "0.1.21", features = ["openssl"] }
ntex-files = { git = "https://github.com/ntex-rs/ntex-extras.git" }
ntex-middleware-redirect-https = { git = "https://github.com/Archimboldi/ntex-middleware-redirect-https.git" }
sqlx = { version = "0.3.5", features = [ "sqlite" ] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.31"
flexi_logger = { version = "0.15.7", default_features = false }
log = "0.4.8"
dotenv = "0.15.0"
thiserror = "1.0.20"
sqlx-core = "0.3.5"
openssl = "0.10.30"